--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
       <body>
-            <script src="./src/index.ts"></script>
+            <div id="root"></div>
             <div>It works!</div>
       </body>
 </html>
+      <script src="./src/index.ts"></script>
